// Copyright 2025 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package google.confidential_match.mrp.backend;

option java_package = "com.google.cm.mrp.backend";
option java_outer_classname = "CondensedResponseColumnProto";

// Used to combine output CSV columns into proto as specified by the
// MatchConfig.
message CondensedResponseColumn {

  // Represent an individual column's name (key) and its value.
  message KeyValue {
    string key = 1;
    string value = 2;
  }

  // Represent a grouping of columns.
  // Eg. A PII group `Address` would be made up by the individual fields of an
  // address.
  message ColumnGroup {
    string name = 1;
    repeated KeyValue subcolumns = 2;
  }

  // For any given "Column", this is used to indicate if that column just
  // contains a single key and value, or if it instead holds a group of columns.
  message Column {
    oneof column_type {
      ColumnGroup column_group = 1;
      KeyValue column = 2;
    }
  }

  repeated Column columns = 1;
}
